assets/src/scss/myfossil/_myfossil.scss
@import "myfossil/navbar";

/*/ Hacks /*/

#group-dir-search
{ float: none !important; }

/*/ HTML /*/

h4, .h4,
h5, .h5,
h6, .h6
{
	border-bottom: 1px solid $color-gray-lighter;
}


h1, .h1,
h2, .h2,
h3, .h3 {
	margin: 0;
	padding-top: $line-height-computed;
	padding-bottom: ($line-height-computed);
}

h4, .h4,
h5, .h5,
h6, .h6 {
	// margin: 0;
	padding-top: ($line-height-computed /2 );
	padding-bottom: ($line-height-computed /2 );

	
}

h3, .h3,
h4, .h4,
h5, .h5,
h6, .h6
{
	text-transform: uppercase;
}

label
{
	font-family: $headings-font-family;
	text-transform: uppercase;
	color: $color-secondary-dark;
	// font-weight: normal;
}

/*/ Bootstrap /*/

.btn
{
	text-transform: uppercase; 
	border-bottom: 1px solid darken( $btn-default-border, 10% );
	@include box-shadow( inset 0px 0px 0px 1px rgba(255,255,255,0.9), 0px 2px 2px rgba(0,0,0,0.1) );
}

.btn-default
{
	@include gradient-vertical( $btn-default-gradient-start, $btn-default-gradient-end, 50%, 100% );
}

/*/  /*/

.page-styling
{
	background-color: white;
	border: 1px solid $color-background-border;
}

.page-styling,
.page-padding
{
	padding-top: $padding-large-horizontal;
	padding-bottom: $padding-large-horizontal;
	padding-left: $padding-large-horizontal;
	padding-right: $padding-large-horizontal;
}

.sidebar
{
	font-size: 14px;
	// border: 1px solid red;
}

.sidebar .section
{
	padding-top: $padding-large-vertical;
	padding-bottom: $padding-large-vertical;

	border-top: 1px solid $color-gray-lighter;

	// border: 1px solid blue;

	&:first-of-type
	{
		padding-top: 0;
		border-top: none;

	}
}

.sidebar-left
{}

.sidebar-right
{}

.next-to-left-sidebar { border-left: 1px solid $color-gray-lighter; }
.next-to-right-sidebar { border-right: 1px solid $color-gray-lighter; }

/*/ Fix Classes /*/

.separate,
.separate-top,
.separate-bottom,
{
	margin-top: $padding-large-vertical;
	margin-bottom: $padding-large-vertical;
}

.separate-top { margin-bottom: 0; }
.separate-bottom { margin-top: 0; }


.no-margin
{
	margin: 0 !important;
}

.no-padding,
.container-no-padding
{
	padding: 0 !important;
}

.col-no-padding
{
	padding-left: 0;
	padding-right: 0;
}

.row-centered {
    text-align: center;
}

.col-centered {
    display:inline-block;
    float:none;
    text-align:left;
}

.no-border-top		{ border-top: none !important; }
.no-border-bottom	{ border-bottom: none !important; }
.no-border-left		{ border-left: none !important; }
.no-border-right	{ border-right: none !important; }


/*/ BuddyPress Container /*/

$size-buddypress-padding-top		: 20px;
$size-buddypress-header-padding		: 20px;

#buddypress
{
	//margin-top : 40px;
	padding-top : $size-buddypress-padding-top;
}


#buddypress-header + #buddypress
{
	margin-top : 0px;
}

/*/ BuddyPress Header /*/

#buddypress-header
{
	background-color: #fcfcfc;
	border-bottom: 1px solid $color-gray-light;

	&,
	#item-header,
	#item-nav
	{
		padding-left: 0 !important;
		padding-right: 0 !important;
	}

	#item-header
	{
		padding-top: $size-buddypress-header-padding;
		padding-bottom: $size-buddypress-header-padding;
	}

	#item-header-avatar
	{}

	 #item-header-avatar + #item-header-content
	 {}

	h1
	{
		border-bottom: none;
	}

	&.dark
	{
		border-top: 4px solid black;
		border-bottom: none;
		background-color: $black;

		color: darken( white, 50% );

		h1, h1 a,
		h2, h2 a
		{
			color: white;
			text-shadow: 0px 4px 2px black;
		}

		dd
		{
			color: white;
		}

		.nav-tabs li
		{
			// margin-bottom: 0;
			border-right: 1px solid $black;
		}

		.nav-tabs li a
		{
			background-color: darken( white, 70% );
			text-shadow: 0px -1px black;
		}

		.nav-tabs li.active
		{

		}
	}

	dd
	{
		padding-left: 0.25em;
		color: $black;
	}

	.item-list-tabs
	{
		margin: 0;
	}

	.nav-tabs
	{
		border-bottom: none;

		li
		{
			&.active
			{

				a,
				a:hover,
				a:focus
				{
					background-color: white !important;

					color: $black;
					text-shadow: none;
				}
			}

			a
			{
				padding-top: 10px;
				padding-bottom: 10px;
				padding-left: 30px;
				padding-right: 30px;

		        &:hover
		        {
		        	// background-color: transparent;
		        }
			}
		}
	}
}

/*/ Nav tabs /*/

.item-list-tabs
{
	margin: 0;
}

.nav-tabs
{
	// background-color: $color-background;
	// border-top: 1px solid $color-gray-lighter;

	li
	{
		//
	}

	li.active
	{
		//
	}

	li a
	{
		margin-right: 0;

		border-radius: 0;

		font-family: $headings-font-family;
        font-weight: $headings-font-weight;
        color: $color-gray-medium;
        text-transform: uppercase;
        text-decoration: none;

        &:hover
        {
        	border-color: transparent;
        }
	}
}


/*/ Home /*/

#user-left
{
	font-size: $font-size-base;
}

#whats-new-avatar #user-info
{
	*
	{
		// text-align: center;
	}

	h4
	{
		margin: 0;
		text-transform: none;
	}

	span.username
	{

	}
}

#whats-new-avatar .row
{
	margin-bottom: 20px;
}

#user-left .list-lines
{
	color: $color-gray-medium;

	&, a
	{
		font-family: $headings-font-family;
		// text-transform: uppercase;
	}

	li
	{
		padding-left: 0;
		padding-right: 0;

		a
		{
			// color : $color-primary;
			// font-weight: bold;
			text-decoration: none;
		}
	}
}

/*/ Panel /*/

.panel
{
	@include box-shadow( 0px 1px 1px 0px rgba( 0,0,0, 0.25 ) );
	border: 1px solid $color-gray-light;
    padding: 0;
}

.panel .panel-heading
{
    background-color: $white;
	font-size: 13px;
	border-bottom: 1px solid $color-gray-light;
    padding: 10px;
}

.panel .panel-body
{
	background-color: white;
    border: none !important;
    font-weight: bold;
    font-size: 1.4em;
    padding: 0 20px 0 20px;

    .activity-content {
        padding: 10px 0 0 0;
    }

    .activity-comments {
        padding: 0;
    }
}

.panel .panel-footer
{
	background: #fafafa;
    padding: 10px;
}

.panel .activity-meta
{
	border-top: 1px solid $color-gray-lighter;
}

.panel .activity-meta .btn
{
	padding-left: 0;

	background: none;
	border: none;
	@include box-shadow( none );

	text-transform: none;
	font-family: $font-family-base;
	font-weight: normal;
	color: $color-primary;
	font-size: 12px;
}

/*/ Tables /*/ 

.table
{
	font-size: $font-size-small;
	color: $color-gray-medium;	
}

.table th
{
	font-family: $headings-font-family;
	font-weight: bold;
	text-transform: uppercase;
	color: $headings-color;
}

.table th, .table.item-list th { border-top: none; }

.table tbody tr td
{
	vertical-align: middle;
}

.table td.avatar
{
	width: 50px;
}

.table td .item-title
{
	font-weight: bold;
	font-size: $font-size-h5;

	a{ text-decoration: none; }

	.item-meta
	{
		font-size: $font-size-small;
		font-weight: normal;
	}
}

/**
 * Avatar settings
 */
#item-header-avatar {
    text-align: center;
}

/*
 * Activity
 */
.comment-reply-form {
    margin-top: 20px !important;
}

/*
 * Footer
 */
.site-footer {
    width: 100%;
    background-color: $black;
    padding: 50px;
    text-align: center;

    #nav {
        text-align: left;
    }
}

